--- a/playground.ipynb
+++ b/playground.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyMBlA6EqYSuGhYLxGeiz9px",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sakinijino/minesweeper_rl/blob/main/playground.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,12 +12,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Setup and Installation"
-      ],
       "metadata": {
         "id": "qO4hT1Wu4NVS"
-      }
+      },
+      "source": [
+        "# Setup and Installation"
+      ]
     },
     {
       "cell_type": "code",
@@ -53,29 +35,34 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Training"
-      ],
       "metadata": {
         "id": "1I-aOhED4jww"
-      }
+      },
+      "source": [
+        "# Training"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vhPdRHX7gRtB"
+      },
+      "outputs": [],
       "source": [
         "# 加载 TensorBoard Colab 扩展\n",
         "%load_ext tensorboard\n",
         "# 指定你设置的日志目录 (Google Drive 中的路径)\n",
         "%tensorboard --logdir ./logs"
-      ],
-      "metadata": {
-        "id": "vhPdRHX7gRtB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "NEoYU2nWcSDF"
+      },
+      "outputs": [],
       "source": [
         "!python train.py \\\n",
         "  --total_timesteps 1000000 \\\n",
@@ -100,26 +87,31 @@
         "  --width 4 \\\n",
         "  --height 4 \\\n",
         "  --n_mines 3 \\\n",
+        "  --reward-win 1.0 \\       \n",
+        "  --reward-lose -1.0 \\     \n",
+        "  --reward-reveal 0.1 \\    \n",
+        "  --reward-invalid -0.1 \\\n",
+        "  --max-reward-per-step 0.2 \\\n",
         "  --device \"cuda\" \\\n",
         "  --vec_env_type \"subproc\""
-      ],
-      "metadata": {
-        "id": "NEoYU2nWcSDF"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Evaluation"
-      ],
       "metadata": {
         "id": "IQF-kBCv4m4q"
-      }
+      },
+      "source": [
+        "# Evaluation"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "O4Y9e6IWgE6w"
+      },
+      "outputs": [],
       "source": [
         "!python play.py \\\n",
         "  --batch \\\n",
@@ -130,45 +122,58 @@
         "  --height 4 \\\n",
         "  --n_mines 3 \\\n",
         "  --device \"cpu\""
-      ],
-      "metadata": {
-        "id": "O4Y9e6IWgE6w"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Shortcuts"
-      ],
       "metadata": {
         "id": "tdQztSTa4uz_"
-      }
+      },
+      "source": [
+        "# Shortcuts"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!git pull origin main"
-      ],
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "ewDgvzVokYD4"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!git pull origin main"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!rm -rf ./logs\n",
-        "!rm -rf ./models"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Beq4lJJWmbC_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!rm -rf ./logs\n",
+        "!rm -rf ./models"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyMBlA6EqYSuGhYLxGeiz9px",
+      "gpuType": "T4",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
