--- a/playground.ipynb
+++ b/playground.ipynb
@@ -92,6 +92,7 @@
         "  --reward-reveal 0.1 \\\n",
         "  --reward-invalid -0.1 \\\n",
         "  --max-reward-per-step 0.2 \\\n",
+        "  --seed 42 \\\n",
         "  --device \"cuda\" \\\n",
         "  --vec_env_type \"subproc\""
       ]
@@ -121,6 +122,7 @@
         "  --width 4 \\\n",
         "  --height 4 \\\n",
         "  --n_mines 3 \\\n",
+        "  --seed 42 \\\n",
         "  --device \"cpu\""
       ]
     },
