--- a/playground.ipynb
+++ b/playground.ipynb
@@ -87,11 +87,11 @@
         "  --width 4 \\\n",
         "  --height 4 \\\n",
         "  --n_mines 3 \\\n",
-        "  --reward-win 1.0 \\\n",
-        "  --reward-lose -1.0 \\\n",
-        "  --reward-reveal 0.1 \\\n",
-        "  --reward-invalid -0.1 \\\n",
-        "  --max-reward-per-step 0.2 \\\n",
+        "  --reward_win 1.0 \\\n",
+        "  --reward_lose -1.0 \\\n",
+        "  --reward_reveal 0.1 \\\n",
+        "  --reward_invalid -0.1 \\\n",
+        "  --max_reward_per_step 0.2 \\\n",
         "  --seed 42 \\\n",
         "  --device \"cuda\" \\\n",
         "  --vec_env_type \"subproc\""
