Refined the design of save directory, aiming to save and compare different training runs easily.

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -45,6 +45,16 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "vhPdRHX7gRtB"
       },
@@ -53,7 +63,7 @@
         "# 加载 TensorBoard Colab 扩展\n",
         "%load_ext tensorboard\n",
         "# 指定你设置的日志目录 (Google Drive 中的路径)\n",
-        "%tensorboard --logdir ./logs"
+        "%tensorboard --logdir \"/content/drive/MyDrive/Coding/minesweeper/training_runs\""
       ]
     },
     {
@@ -65,30 +75,28 @@
       "outputs": [],
       "source": [
         "!python train.py \\\n",
-        "  --total_timesteps 1000000 \\\n",
+        "  --total_timesteps 10000 \\\n",
         "  --n_envs 8 \\\n",
         "  --n_steps 1024 \\\n",
         "  --batch_size 128 \\\n",
         "  --n_epochs 8 \\\n",
         "  --learning_rate 0.00005 \\\n",
         "  --ent_coef 0.01 \\\n",
-        "  --gamma 0.98 \\\n",
-        "  --gae_lambda 0.80 \\\n",
-        "  --clip_range 0.1 \\\n",
+        "  --gamma 0.99 \\\n",
+        "  --gae_lambda 0.90 \\\n",
+        "  --clip_range 0.2 \\\n",
         "  --vf_coef 1.0 \\\n",
         "  --features_dim 128 \\\n",
         "  --pi_layers \"64,64\" \\\n",
-        "  --vf_layers \"256,256,128\" \\\n",
+        "  --vf_layers \"256,256\" \\\n",
         "  --checkpoint_freq 50000 \\\n",
-        "  --log_dir \"./logs\" \\\n",
-        "  --model_dir \"./models\" \\\n",
-        "  --model_prefix \"maskedppo_run\" \\\n",
-        "  --tb_log_name \"MinesweeperExperiment\" \\\n",
-        "  --width 4 \\\n",
-        "  --height 4 \\\n",
+        "  --experiment_base_dir \"/content/drive/MyDrive/Coding/minesweeper/training_runs\" \\\n",
+        "  --model_prefix \"ppo_run\" \\\n",
+        "  --width 5 \\\n",
+        "  --height 5 \\\n",
         "  --n_mines 3 \\\n",
-        "  --reward_win 1.0 \\\n",
-        "  --reward_lose -1.0 \\\n",
+        "  --reward_win 0.2 \\\n",
+        "  --reward_lose -0.05 \\\n",
         "  --reward_reveal 0.1 \\\n",
         "  --reward_invalid -0.1 \\\n",
         "  --max_reward_per_step 0.2 \\\n",
@@ -116,11 +124,10 @@
       "source": [
         "!python play.py \\\n",
         "  --batch \\\n",
-        "  --num-episodes 200 \\\n",
-        "  --model_dir \"./models\" \\\n",
-        "  --model_prefix \"maskedppo_run\" \\\n",
-        "  --width 4 \\\n",
-        "  --height 4 \\\n",
+        "  --num_episodes 200 \\\n",
+        "  --training_run_dir \"/content/drive/MyDrive/Coding/minesweeper/training_runs/ppo_run_4x4x3_seed42_20250512-224809/\" \\\n",
+        "  --width 5 \\\n",
+        "  --height 5 \\\n",
         "  --n_mines 3 \\\n",
         "  --seed 42 \\\n",
         "  --device \"cpu\""
@@ -145,18 +152,6 @@
       "outputs": [],
       "source": [
         "!git pull origin main"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Beq4lJJWmbC_"
-      },
-      "outputs": [],
-      "source": [
-        "!rm -rf ./logs\n",
-        "!rm -rf ./models"
       ]
     }
   ],
