Slight changes in the paths and the arguments

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -63,7 +63,7 @@
         "# 加载 TensorBoard Colab 扩展\n",
         "%load_ext tensorboard\n",
         "# 指定你设置的日志目录 (Google Drive 中的路径)\n",
-        "%tensorboard --logdir \"/content/drive/MyDrive/Coding/minesweeper/training_runs\""
+        "%tensorboard --logdir \"/content/drive/MyDrive/Coding/minesweeper_rl/training_runs\""
       ]
     },
     {
@@ -75,7 +75,7 @@
       "outputs": [],
       "source": [
         "!python train.py \\\n",
-        "  --total_timesteps 10000 \\\n",
+        "  --total_timesteps 1_000_000 \\\n",
         "  --n_envs 8 \\\n",
         "  --n_steps 1024 \\\n",
         "  --batch_size 128 \\\n",
@@ -90,7 +90,7 @@
         "  --pi_layers \"64,64\" \\\n",
         "  --vf_layers \"256,256\" \\\n",
         "  --checkpoint_freq 50000 \\\n",
-        "  --experiment_base_dir \"/content/drive/MyDrive/Coding/minesweeper/training_runs\" \\\n",
+        "  --experiment_base_dir \"/content/drive/MyDrive/Coding/minesweeper_rl/training_runs\" \\\n",
         "  --model_prefix \"ppo_run\" \\\n",
         "  --width 5 \\\n",
         "  --height 5 \\\n",
@@ -125,7 +125,7 @@
         "!python play.py \\\n",
         "  --batch \\\n",
         "  --num_episodes 200 \\\n",
-        "  --training_run_dir \"/content/drive/MyDrive/Coding/minesweeper/training_runs/ppo_run_4x4x3_seed42_20250512-224809/\" \\\n",
+        "  --training_run_dir \"/content/drive/MyDrive/Coding/minesweeper_rl/training_runs/ppo_baseline_5x5x3_seed42/\" \\\n",
         "  --width 5 \\\n",
         "  --height 5 \\\n",
         "  --n_mines 3 \\\n",
