Update playground notebook

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install gymnasium stable-baselines3[extra] sb3_contrib pygame\n",
+    "!pip install gymnasium stable-baselines3[extra] sb3_contrib pygame pytest PyYAML\n",
     "!git clone https://github.com/sakinijino/minesweeper_rl.git\n",
     "%cd minesweeper_rl/"
    ]
@@ -74,34 +74,9 @@
    },
    "outputs": [],
    "source": [
-    "!python train.py \\\n",
+    "!python train.py --config configs/colab_config.yaml \\\n",
     "  --total_timesteps 1_000_000 \\\n",
-    "  --n_envs 8 \\\n",
-    "  --n_steps 1024 \\\n",
-    "  --batch_size 128 \\\n",
-    "  --n_epochs 8 \\\n",
-    "  --learning_rate 0.0001 \\\n",
-    "  --ent_coef 0.01 \\\n",
-    "  --gamma 0.99 \\\n",
-    "  --gae_lambda 0.95 \\\n",
-    "  --clip_range 0.2 \\\n",
-    "  --vf_coef 0.5 \\\n",
-    "  --features_dim 128 \\\n",
-    "  --pi_layers \"64,64\" \\\n",
-    "  --vf_layers \"64,64\" \\\n",
-    "  --checkpoint_freq 50000 \\\n",
-    "  --experiment_base_dir \"/content/drive/MyDrive/Coding/minesweeper_rl/training_runs\" \\\n",
-    "  --model_prefix \"ppo_run\" \\\n",
-    "  --width 5 \\\n",
-    "  --height 5 \\\n",
-    "  --n_mines 3 \\\n",
-    "  --reward_win 0.2 \\\n",
-    "  --reward_lose -0.05 \\\n",
-    "  --reward_reveal 0.1 \\\n",
-    "  --reward_invalid -0.1 \\\n",
-    "  --seed 42 \\\n",
-    "  --device \"cuda\" \\\n",
-    "  --vec_env_type \"subproc\""
+    "  --experiment_base_dir \"/content/drive/MyDrive/Coding/minesweeper_rl/training_runs\""
    ]
   },
   {
@@ -119,47 +94,8 @@
    "source": [
     "# Continue training from latest checkpoint in a training run directory\n",
     "!python train.py \\\n",
-    "  --continue_from \"/content/drive/MyDrive/Coding/minesweeper_rl/training_runs/ppo_baseline_5x5x3_seed42/\" \\\n",
-    "  --total_timesteps 500_000 \\\n",
-    "  --n_envs 8 \\\n",
-    "  --checkpoint_freq 50000 \\\n",
-    "  --experiment_base_dir \"/content/drive/MyDrive/Coding/minesweeper_rl/training_runs\" \\\n",
-    "  --width 5 \\\n",
-    "  --height 5 \\\n",
-    "  --n_mines 3 \\\n",
-    "  --reward_win 0.2 \\\n",
-    "  --reward_lose -0.05 \\\n",
-    "  --reward_reveal 0.1 \\\n",
-    "  --reward_invalid -0.1 \\\n",
-    "  --seed 42 \\\n",
-    "  --device \"cuda\" \\\n",
-    "  --vec_env_type \"subproc\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Continue training from a specific step checkpoint (e.g., 500000 steps)\n",
-    "!python train.py \\\n",
-    "  --continue_from \"/content/drive/MyDrive/Coding/minesweeper_rl/training_runs/ppo_baseline_5x5x3_seed42/\" \\\n",
-    "  --continue_steps 500_000 \\\n",
-    "  --total_timesteps 500_000 \\\n",
-    "  --n_envs 8 \\\n",
-    "  --checkpoint_freq 50000 \\\n",
-    "  --experiment_base_dir \"/content/drive/MyDrive/Coding/minesweeper_rl/training_runs\" \\\n",
-    "  --width 5 \\\n",
-    "  --height 5 \\\n",
-    "  --n_mines 3 \\\n",
-    "  --reward_win 0.2 \\\n",
-    "  --reward_lose -0.05 \\\n",
-    "  --reward_reveal 0.1 \\\n",
-    "  --reward_invalid -0.1 \\\n",
-    "  --seed 42 \\\n",
-    "  --device \"cuda\" \\\n",
-    "  --vec_env_type \"subproc\""
+    "  --continue_from \"/content/drive/MyDrive/Coding/minesweeper_rl/training_runs/mw_ppo_5x5x3_seed42_20250705152544/\" \\\n",
+    "  --total_timesteps 1_000_000"
    ]
   },
   {
@@ -180,14 +116,8 @@
    "outputs": [],
    "source": [
     "!python play.py \\\n",
-    "  --batch \\\n",
-    "  --num_episodes 200 \\\n",
-    "  --training_run_dir \"/content/drive/MyDrive/Coding/minesweeper_rl/training_runs/ppo_baseline_5x5x3_seed42/\" \\\n",
-    "  --width 5 \\\n",
-    "  --height 5 \\\n",
-    "  --n_mines 3 \\\n",
-    "  --seed 42 \\\n",
-    "  --device \"cpu\""
+    "  --mode batch \\\n",
+    "  --training_run_dir \"/content/drive/MyDrive/Coding/minesweeper_rl/training_runs\""
    ]
   },
   {
